# Compromise-View-Model-Multi-Agent-Task-Allocation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: compromise_view_model.hpp
src/: CV_model.cpp  plot_path.py
test/: test_cv.py
